# step1

./: CMakeLists.txt
config/: vsomeip-client.json  vsomeip-server.json
src/: server.cpp
src/client/: client.cpp
src/server/: server.cpp
